manifests/service-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-client-svc
  namespace: td
spec:
  type: NodePort
  selector:
    app: todo
  ports:
    - name: http 
      port: 80
      protocol: TCP
      targetPort: 5000
