manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: td
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              serviceName: todo-client-svc
              servicePort: 80
          - path: /images/*
            pathType: Prefix
            backend:
              serviceName: todo-server-svc
              servicePort: 80
          - path: /todos
            backend:
              serviceName: todo-server-svc
              servicePort: 80
